<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dip"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="30dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <ImageView
            android:id="@+id/imgDrawerImage"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dip"
            android:layout_toRightOf="@id/imgDrawerImage"
            android:clickable="true"

            android:focusable="true"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txtUserFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dip"
        android:text="@string/name"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/dummy_phone"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic" />
</LinearLayout>