<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/colorSecondary"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:weightSum="5">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/enter_full_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/location"
            android:drawablePadding="10dp"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_edit_text"
            android:backgroundTint="@color/colorBackground"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />
</RelativeLayout>